k8s/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: default
  labels:
    app: example-app
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app
      env: prod
  template:
    metadata:
      labels:
        app: example-app
        env: prod
    spec:
      containers:
      - name: example-app
        image: mrzacarias/example-app:latest
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
