k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: default
  labels:
    app: example-app
    env: prod
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: example-app
    env: prod
---
apiVersion: v1
kind: Service
metadata:
  name: example-app-internal
  namespace: default
  labels:
    app: example-app
    env: prod
spec:
  type: ClusterIP
  ports:
  - name: internal
    port: 81
    targetPort: 8081
  selector:
    app: example-app
    env: prod
